deplase requirements nan root pou Railway ka jwenn li

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,18 +3,5 @@ gunicorn
 supabase
 python-dotenv
 pandas
-flask
-gunicorn
-supabase
-python-dotenv
-pandas
-flask
-gunicorn
-supabase
-python-dotenv
-pandas
-flask
-gunicorn
-supabase
-python-dotenv
-pandas
+dash
+dash-bootstrap-components
